@@ -1,3 +1,8 @@
+2010-06-03 Philipp Klaus Krause <pkk AT spth.de>
+	* device/lib/_memcpy,
+	  device/lib/_memmove.c:
+	  Library cleanup.
+
 2010-06-02 Borut Razem <borut.razem AT siol.net>
 
 	* doc/sdccman.lyx: corrected z80 assembler name, corrected revision
